# plasma-apcups

./: CHANGELOG  CMakeLists.txt  INSTALL  Installation.md  ProjectHome.md  README  UserGuide.md  VERSION  install.sh  obs-staging.sh
obs/: apcups_basic.spec  debian.changelog  debian.control  debian.rules  plasma-apcups-xUbuntu_10.04.dsc  plasma-apcups.dsc
plasma-applet-apcups/: ApcUpsPlasmoidConfiguration.ui  CMakeLists.txt  apcupsplasmoid.cpp  apcupsplasmoid.h  apcupsplasmoidwidget.cpp  apcupsplasmoidwidget.h  plasma-applet-apcups.desktop  plasma-applet-apcups.desktop.in  plasma-applet-apcups.notifyrc
plasma-applet-apcups/img/: CMakeLists.txt
plasma-dataengine-apcups/: CMakeLists.txt  apcupsc.cpp  apcupsc.h  apcupscif.cpp  apcupscif.h  apcupsengine.cpp  apcupsengine.h  eu.navlost.apcupsmon.xml  plasma-engine-apcups.desktop  plasma-engine-apcups.desktop.in
po/: CMakeLists.txt  ca.po  extract_strings.sh  fr.po  plasma_applet_apcups.pot
